# nonebot-plugin-heweather

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  原型.html
.github/workflows/: pre-commit.yml  publish.yml  release-drafter.yml  test.yml
nonebot-plugins-heweather/: __init__.py  get_weather.py
nonebot_plugin_heweather/: __init__.py  config.py  convrt_pic.py  get_weather.py  model.py  render_pic.py  types.py  utils.py  weather_data.py
nonebot_plugin_heweather/templates/: weather.html
nonebot_plugin_heweather/templates/css/: weather.css
tests/: .gitignore  conftest.py  test_heweather.py
