[project]
name = "nonebot-plugin-heweather"
version = "0.6.8"
description = "Get Heweather information and convert to pictures"
authors = [
    {name = "kexue", email = "xana278@foxmail.com"},
]
dependencies = [
    "httpx<1.0.0,>=0.18.0",
    "nonebot-plugin-htmlrender>=0.0.4.3",
    "nonebot-adapter-onebot>=2.0.0",
    "pydantic>=1.5.0",
    "nonebot2[fastapi]>=2.0.0",
]
requires-python = ">=3.8,<4.0"
license = {file = "LICENSE"}
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/kexue-z/nonebot-plugin-heweather"
"Bug Tracker" = "https://github.com/kexue-z/nonebot-plugin-heweather/issues"

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pillow>=9.5.0",
    "nonebug>=0.3.4",
    "pytest-asyncio>=0.21.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
