[project]
name = "nonebot-plugin-heweather"
version = "0.8.0"
description = "Get Heweather information and convert to pictures"
authors = [{ name = "kexue", email = "xana278@foxmail.com" }]
dependencies = [
    "httpx<1.0.0,>=0.18.0",
    "nonebot-plugin-htmlrender>=0.0.4.3",
    "nonebot2>=2.2.0",
    "nonebot-plugin-alconna>=0.38.0",
]
requires-python = ">=3.8,<4.0"
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
"Homepage" = "https://github.com/kexue-z/nonebot-plugin-heweather"
"Bug Tracker" = "https://github.com/kexue-z/nonebot-plugin-heweather/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true

[tool.pyright]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
defineConstant = { PYDANTIC_V2 = true }

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037"]

[tool.pdm.build]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pillow>=9.5.0",
    "nonebug>=0.3.4",
    "pytest-asyncio>=0.21.0",
    "isort>=5.12.0",
    "fastapi>=0.93.0",
    "nonebot-adapter-onebot>=2.3.1",
]
